--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
         <div id="suggestions"></div>
     </div>
 
-    <!-- Script Reference -->
-    <script src="script.js"></script>
+    <!-- Scripts -->
+    <script src="scripts/initialization.js"></script>
+    <script src="scripts/excelUpload.js"></script>
+    <script src="scripts/mapInteraction.js"></script>
+    <script src="scripts/searchBar.js"></script>
+    <script src="scripts/utilities.js"></script>
+    <script src="scripts/timezoneBoxes.js"></script>
 </body>
 </html>
